--- a/src/pages/Form/styles/_form-buttons.scss
+++ b/src/pages/Form/styles/_form-buttons.scss
@@ -47,3 +47,81 @@
   text-decoration: underline;
   text-underline-offset: 0.5rem;
 }
+
+// Checkbox
+
+.phone-number-select {
+  width: 100%;
+  height: 25px;
+  padding: 1rem;
+
+  margin-bottom: 40px;
+
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+
+  @include flex-mixin.flex-start;
+
+  flex-direction: row;
+
+  img {
+    cursor: pointer;
+  }
+
+  select {
+    color: rgba(255, 255, 255, 0.5);
+    margin-right: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+  }
+
+  input {
+    border: none;
+    width: auto;
+
+    margin: 0;
+
+
+    &:focus {
+      border: none;
+    }
+
+    &:hover {
+      border: none;
+    }
+  }
+}
+
+.form-section-checkbox {
+  width: 100%;
+  height: auto;
+
+  @include flex-mixin.flex-center;
+  flex-direction: row;
+  gap: 5rem;
+
+  a {
+    color: white;
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+  }
+
+  input[type="checkbox"] {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    background-color: #3F4222;
+    cursor: pointer;
+
+    @include flex-mixin.flex-center;
+  }
+
+
+  input[type="checkbox"]:checked::after {
+    content: '✔';
+    font-size: 24px;
+    color: white;
+  }
+
+}
