--- a/src/pages/Form/styles/_form-wrapper.scss
+++ b/src/pages/Form/styles/_form-wrapper.scss
@@ -9,6 +9,32 @@
   flex-direction:  column;
 }
 
+.form-inputs-container {
+  width: 100%;
+  height: auto;
+  input {
+    width: 100%;
+    height: 25px;
+    padding: 1rem;
+
+    margin-bottom: 40px;
+
+    -webkit-text-fill-color: #ffffff80 !important;
+    transition: background-color 5000s ease-in-out 0s !important;
+
+    color: rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+
+    &:focus {
+      border-bottom: 1px solid white;
+    }
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.5);
+    }
+  }
+}
+
 .form-bg {
   background-image: url("/assets/dark-bg.webp");
   @include bg-image-settings.bg-settings;
