--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .home-wrapper {
@@ -167,6 +168,27 @@
   flex-direction: column;
 }
 
+.form-inputs-container {
+  width: 100%;
+  height: auto;
+}
+.form-inputs-container input {
+  width: 100%;
+  height: 25px;
+  padding: 1rem;
+  margin-bottom: 40px;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.5019607843) !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+}
+.form-inputs-container input:focus {
+  border-bottom: 1px solid white;
+}
+.form-inputs-container input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .form-bg {
   background-image: url("/assets/dark-bg.webp");
   background-size: cover;
@@ -226,6 +248,70 @@
   text-underline-offset: 0.5rem;
 }
 
+.phone-number-select {
+  width: 100%;
+  height: 25px;
+  padding: 1rem;
+  margin-bottom: 40px;
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+.phone-number-select img {
+  cursor: pointer;
+}
+.phone-number-select select {
+  color: rgba(255, 255, 255, 0.5);
+  margin-right: 0.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.phone-number-select input {
+  border: none;
+  width: auto;
+  margin: 0;
+}
+.phone-number-select input:focus {
+  border: none;
+}
+.phone-number-select input:hover {
+  border: none;
+}
+
+.form-section-checkbox {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 5rem;
+}
+.form-section-checkbox a {
+  color: white;
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
+}
+.form-section-checkbox input[type=checkbox] {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: #3F4222;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-section-checkbox input[type=checkbox]:checked::after {
+  content: "✔";
+  font-size: 24px;
+  color: white;
+}
+
 .form-container {
   position: relative;
   z-index: 1;
@@ -248,22 +334,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-.form-login input {
-  width: 100%;
-  height: 25px;
-  padding: 1rem;
-  margin-bottom: 40px;
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
-  background: none;
-  outline: none;
-}
-.form-login input:focus {
-  border-bottom: 1px solid white;
-}
-.form-login input::placeholder {
-  color: rgba(255, 255, 255, 0.5);
 }
 
 .form-article {
@@ -865,9 +935,9 @@ input,
 textarea,
 select,
 button {
-  appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
+  appearance: none;
   box-shadow: none;
   border: none;
   outline: none;
