--- a/src/styles.css
+++ b/src/styles.css
@@ -268,6 +268,7 @@
   margin-right: 0.5rem;
   font-size: 1rem;
   cursor: pointer;
+  width: 100px;
 }
 .phone-number-select input {
   border: none;
