--- a/src/pages/Form/styles/_form-buttons.scss
+++ b/src/pages/Form/styles/_form-buttons.scss
@@ -11,7 +11,7 @@
 
 .form-button {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   background-color: #3F4222;
   font-weight: 700;
   font-size: 1rem;
@@ -74,6 +74,11 @@
     font-size: 1rem;
     cursor: pointer;
     width: 100px;
+  }
+
+  option {
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(79, 79, 79, 0.5);
   }
 
   input {
