--- a/src/pages/Form/styles/_form-wrapper.scss
+++ b/src/pages/Form/styles/_form-wrapper.scss
@@ -14,7 +14,7 @@
   height: auto;
   input {
     width: 100%;
-    height: 25px;
+    min-height: 50px;
     padding: 1rem;
 
     margin-bottom: 40px;
