--- a/src/styles.css
+++ b/src/styles.css
@@ -166,7 +166,7 @@
 }
 .form-inputs-container input {
   width: 100%;
-  height: 25px;
+  min-height: 50px;
   padding: 1rem;
   margin-bottom: 40px;
   -webkit-text-fill-color: rgba(255, 255, 255, 0.5019607843) !important;
@@ -207,7 +207,7 @@
 
 .form-button {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   background-color: #3F4222;
   font-weight: 700;
   font-size: 1rem;
@@ -261,6 +261,10 @@
   font-size: 1rem;
   cursor: pointer;
   width: 100px;
+}
+.phone-number-select option {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(79, 79, 79, 0.5);
 }
 .phone-number-select input {
   border: none;
@@ -377,7 +381,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    height: 100vh;
+    height: auto;
     padding: 0 0.9rem 50px 0.9rem;
   }
   .form-login {
@@ -420,12 +424,9 @@
   }
 }
 @media (max-width: 400px) {
-  .form-wrapper {
-    height: auto;
-  }
   .form-login {
     width: 100%;
-    font-size: 0.8rem;
+    font-size: 1rem;
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
@@ -435,7 +436,6 @@
   }
   .form-login input {
     padding: 0.5rem;
-    height: auto;
   }
 }
 .success-wrapper {
@@ -982,6 +982,7 @@ button {
   border: none;
   outline: none;
   background: none;
+  font-size: 1rem;
 }
 
 button:hover {
