--- a/src/styles.css
+++ b/src/styles.css
@@ -996,6 +996,13 @@ input[type=search]::-webkit-search-results-decoration {
   display: none;
 }
 
+button:active {
+  outline: none;
+  border: none;
+  box-shadow: none;
+  background: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
