--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,13 @@ input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 
+button:active {
+  outline: none;
+  border: none;
+  box-shadow: none;
+  background: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
